--- a/faq.html
+++ b/faq.html
@@ -277,6 +277,7 @@
       background-color: #ffffff; /* Hintergrund für den FAQ-Bereich, kann angepasst werden */
       color: #000000;
       padding: 80px 40px;
+      padding-top: 160px;
       text-align: center; /* Titel zentrieren */
     }
 
@@ -453,7 +454,7 @@
     }
     /* Speziell für die .neue-faq-sektion, die direkt vor dem Footer kommt, um den Abstand zu vergrößern */
     .neue-faq-sektion:has(+ .main-footer) {
-      padding-bottom: 190px; /* Erhöhter Wert (z.B. 240px statt 160px) für mehr Abstand zum Footer */
+      padding-bottom: 230px; /* Erhöhter Wert (z.B. 240px statt 160px) für mehr Abstand zum Footer */
     }
 
     /* Allgemeine Stile und Animationsvorbereitung für ALLE section-divider (kopiert von index.html) */
