--- a/kontakt.html
+++ b/kontakt.html
@@ -303,6 +303,14 @@
       font-family: 'Poppins', sans-serif; /* Konsistente Schriftart */
       font-weight: 300; /* Poppins Light */
       line-height: 1.3; /* Bessere Lesbarkeit für längeren Text */
+      /* Hinzugefügt für die Animation (kopiert von index.html) */
+      opacity: 0;
+      transform: translateY(30px); /* Startet 30px weiter unten */
+      transition: opacity 0.8s ease-out, transform 0.8s ease-out;
+    }
+    .info-section .right-column .welcome-text.visible { /* Kopiert von index.html */
+      opacity: 1;
+      transform: translateY(0); /* Bewegt sich zur Originalposition */
     }
 
     /* Leistungsbereich */
@@ -1327,6 +1335,7 @@
       const navLinksUl = document.querySelector('.nav-links'); // Selektiert das <ul> Element
       const footerNewTitle = document.querySelector('.footer-new-title'); // Selektor für Footer-Titel hinzugefügt
       const heroBackground = document.querySelector('.hero-background');
+      const welcomeText = document.querySelector('.info-section .right-column .welcome-text'); // Selektor für Welcome-Text
       // Alle Sektionen auswählen, bei denen der Farbwechsel stattfinden soll
       // Für die Kontaktseite müssen ggf. andere oder keine Sektionen definiert werden,
       // wenn das dynamische Verhalten der Navigationsleiste (Textfarbe, Blur)
@@ -1377,6 +1386,17 @@
         }
       }
 
+      function checkWelcomeTextVisibility() { // Kopiert von index.html
+        if (welcomeText) {
+          const rect = welcomeText.getBoundingClientRect();
+          // Prüft, ob das Element mindestens zu einem kleinen Teil im Viewport ist
+          // und die Animation noch nicht ausgelöst wurde
+          if (rect.top < window.innerHeight && rect.bottom >= 0 && !welcomeText.classList.contains('visible')) {
+            welcomeText.classList.add('visible');
+          }
+        }
+      }
+
       function checkMenuPosition() {
         let shouldBeDark = false;
 
@@ -1397,12 +1417,14 @@
         // Hero Zoom Effekt aufrufen
         handleHeroZoom();
         checkFooterTitleAnimation(); // Animation für Footer-Titel prüfen
+        checkWelcomeTextVisibility(); // Animation für Welcome-Text prüfen
       }
 
       window.addEventListener('scroll', checkMenuPosition);
       window.addEventListener('resize', checkMenuPosition);
       checkMenuPosition(); // Initiale Prüfung beim Laden der Seite
       handleHeroZoom(); // Initialen Zoom-Status setzen
+      // checkWelcomeTextVisibility(); // Initiale Prüfung für Welcome-Text, falls er direkt sichtbar sein könnte
     });
   </script>
 
