--- a/leistungen.html
+++ b/leistungen.html
@@ -206,9 +206,9 @@
       line-height: 1.2; /* Für bessere Lesbarkeit bei mehrzeiligem Text */
       /* Neue Animation: Initialzustand */
       opacity: 0;
-      transform: translateY(50px); /* Startet 50px weiter unten */
-      transition: opacity 0.8s ease-out, transform 0.8s ease-out;
-      transition-delay: 0.4s; /* Etwas längere Verzögerung für einen sanfteren Start */
+      transform: translateY(20px); /* Startet nur 20px weiter unten für eine subtilere Bewegung */
+      transition: opacity 0.7s ease-out, transform 0.7s ease-out; /* Etwas kürzere Animationsdauer */
+      transition-delay: 0.3s; /* Kürzere Verzögerung für einen schnelleren Start */
     }
     .hero-section h1.animate-hero-title {
       opacity: 1;
