--- a/leistungen.html
+++ b/leistungen.html
@@ -204,16 +204,32 @@
       margin-bottom: 20px;
       text-shadow: 2px 2px 4px rgba(0,0,0,0.5); /* Textschatten für bessere Lesbarkeit */
       line-height: 1.2; /* Für bessere Lesbarkeit bei mehrzeiligem Text */
-      /* Neue Animation: Initialzustand */
+      /* Animations-Eigenschaften vom h1 entfernt, werden auf .hero-line spans angewendet */
+    }
+
+    /* Stile für die zeilenweise Animation von h1 */
+    .hero-section h1 .hero-line {
+      display: inline-block; /* Wichtig für transform und um <br> zu respektieren */
       opacity: 0;
-      transform: translateY(20px); /* Startet nur 20px weiter unten für eine subtilere Bewegung */
-      transition: opacity 0.7s ease-out, transform 0.7s ease-out; /* Etwas kürzere Animationsdauer */
-      transition-delay: 0.3s; /* Kürzere Verzögerung für einen schnelleren Start */
+      transform: translateY(30px); /* Jede Zeile startet etwas tiefer */
+      /* Transition-Eigenschaften werden unten gesetzt, wenn .animate-hero-title aktiv ist */
     }
-    .hero-section h1.animate-hero-title {
+
+    .hero-section h1.animate-hero-title .hero-line {
       opacity: 1;
-      transform: translateY(0); /* Endposition */
+      transform: translateY(0);
+      transition-property: opacity, transform;
+      transition-duration: 0.7s;
+      transition-timing-function: ease-out;
     }
+
+    .hero-section h1.animate-hero-title .hero-line:nth-of-type(1) {
+      transition-delay: 0.3s; /* Verzögerung für die erste Zeile */
+    }
+    .hero-section h1.animate-hero-title .hero-line:nth-of-type(2) {
+      transition-delay: 0.45s; /* Gestaffelte Verzögerung für die zweite Zeile (0.3s + 0.15s) */
+    }
+
     .hero-section h2 {
       font-family: 'Poppins', sans-serif;
       font-weight: 300; /* Light */
@@ -1303,7 +1319,10 @@
   <div class="hero-section">
     <div class="hero-background"></div> 
     <div class="hero-text-wrapper">
-      <h1>Leistungen.<br>Klar & persönlich.</h1>
+      <h1>
+        <span class="hero-line">Leistungen.</span><br>
+        <span class="hero-line">Klar & persönlich.</span>
+      </h1>
       <h2>Diagnostik, Behandlung und Vorsorge – alles in Ihrer Hausarztpraxis.</h2>
     </div>
   </div>
