--- a/faq.html
+++ b/faq.html
@@ -210,6 +210,28 @@
       margin-bottom: 20px;
       text-shadow: 2px 2px 4px rgba(0,0,0,0.5); /* Textschatten für bessere Lesbarkeit */
       line-height: 1.2; /* Für bessere Lesbarkeit bei mehrzeiligem Text */
+      /* Animations-Eigenschaften vom h1 entfernt, werden auf .hero-line spans angewendet */
+    }
+
+    /* Stile für die zeilenweise Animation von h1 (kopiert von leistungen.html) */
+    .hero-section h1 .hero-line {
+      display: inline-block; /* Wichtig für transform und um <br> zu respektieren */
+      opacity: 0;
+      transform: translateY(30px); /* Jede Zeile startet etwas tiefer */
+    }
+
+    .hero-section h1.animate-hero-title .hero-line {
+      opacity: 1;
+      transform: translateY(0);
+      transition-property: opacity, transform;
+      transition-duration: 0.7s;
+      transition-timing-function: ease-out;
+    }
+    .hero-section h1.animate-hero-title .hero-line:nth-of-type(1) {
+      transition-delay: 0.3s; /* Verzögerung für die erste Zeile */
+    }
+    .hero-section h1.animate-hero-title .hero-line:nth-of-type(2) {
+      transition-delay: 0.45s; /* Gestaffelte Verzögerung für die zweite Zeile */
     }
     .hero-section h2 {
       font-family: 'Poppins', sans-serif;
@@ -967,7 +989,10 @@
   <div class="hero-section">
     <div class="hero-background"></div> 
     <div class="hero-text-wrapper">
-      <h1>Fragen stellen.<br>Antworten finden.</h1>
+      <h1>
+        <span class="hero-line">Fragen stellen.</span><br>
+        <span class="hero-line">Antworten finden.</span>
+      </h1>
       <h2>Was Sie rund um unsere Praxis, Abläufe und Leistungen wissen<br>möchten – klar erklärt und gut verständlich.</h2>
     </div>
   </div>
@@ -1143,6 +1168,7 @@
       const mainNav = document.querySelector('.main-nav');
       const navLinksUl = document.querySelector('.nav-links');
       const heroBackground = document.querySelector('.hero-background');
+      const heroTitle = document.querySelector('.hero-section h1'); // Hinzugefügt für h1 Animation
       const welcomeText = document.querySelector('.info-section .right-column .welcome-text'); // Selektor für Welcome-Text
       const sectionDividers = document.querySelectorAll('.section-divider'); // Selektor für Section Dividers
       // const quoteContent = document.querySelector('.quote-content[data-text]'); // Nicht mehr direkt für den Typewriter benötigt
@@ -1177,9 +1203,9 @@
       function checkWelcomeTextVisibility() { // Kopiert von index.html
         if (welcomeText) {
           const rect = welcomeText.getBoundingClientRect();
-          // Prüft, ob das Element mindestens zu einem kleinen Teil im Viewport ist
-          // und die Animation noch nicht ausgelöst wurde
-          if (rect.top < window.innerHeight && rect.bottom >= 0 && !welcomeText.classList.contains('visible')) {
+          // Startet die Animation, wenn die Oberkante des Textes z.B. die 80%-Marke
+          // der Viewport-Höhe (von oben gezählt) überschreitet.
+          if (rect.top < window.innerHeight * 0.9 && rect.bottom >= 0 && !welcomeText.classList.contains('visible')) {
             welcomeText.classList.add('visible');
           }
         }
@@ -1259,6 +1285,13 @@
         }
       }
 
+      // Funktion, um die Animation für den Hero-Titel auszulösen (kopiert von leistungen.html)
+      function triggerHeroTitleAnimation() {
+        if (heroTitle && !heroTitle.classList.contains('animate-hero-title')) {
+          heroTitle.classList.add('animate-hero-title');
+        }
+      }
+
       function checkQuoteAnimation() {
         const rsvTypewriterTarget = document.querySelector('#typewriter-rsv-target'); // Selektor für das spezifische Wort-Span
 
@@ -1300,6 +1333,7 @@
 
       window.addEventListener('scroll', checkMenuPosition);
       window.addEventListener('resize', checkMenuPosition);
+      triggerHeroTitleAnimation(); // Hero-Titel Animation beim Laden auslösen
       checkMenuPosition(); 
       handleHeroZoom(); // Initialen Zoom-Status setzen (wichtig, falls Seite nicht ganz oben geladen wird)
 
